Learning_Phase/tf-vault/vaults-k3s-yaml/vault-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.local.narybits.site`)
      kind: Rule
      services:
        - name: vault-ui
          port: 8200
  tls:
    secretName: local-narybits-site-tls
